--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ author:
   avatar           : "profile.png"
   name             : "Xulu ZHANG"
   pronouns         : # example: "she/her"  
-  bio              : "PhD candidate in Artificial Intelligence"
+  bio              : "PhD candidate at Department of Computing, the Hong Kong Polytechnic University"
   location         : "Hong Kong"
-  employer         : "The Hong Kong Polytechnic University"
+  employer         : "PolyU"
   uri              : # URL
   email            : "compxulu.zhang@connect.polyu.hk" 
 
