--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "" #"academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "pic.jpg"
   name             : "Xulu ZHANG"
   pronouns         : # example: "she/her"  
   bio              : "PhD candidate at Department of Computing, the Hong Kong Polytechnic University"
